authentication & user-data

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,22 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <meta
+      name="google-signin-client_id"
+      content="32272480244-s38hv32sr03hibhe7miuifoso7d02nvf.apps.googleusercontent.com"
+    />
+    <meta http-equiv="Cross-Origin-Opener-Policy" content="unsafe-none" />
   </head>
   <body>
+    <!-- <div
+      id="g_id_onload"
+      data-client_id="32272480244-s38hv32sr03hibhe7miuifoso7d02nvf.apps.googleusercontent.com"
+      data-login_uri="http://localhost:3001/api/login"
+      data-ux_mode="popup"
+      data-auto_select="true"
+    ></div> -->
     <app-root>Loading...</app-root>
   </body>
 </html>
